--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,10 +12,10 @@ services:
       - 3306:3306
 
   web:
-    image: demo/sre-challenge
+    image: viniciusferreirac/vinicius-elo
     depends_on:
       db:
-        condition: service_started
+        condition: service_healthy
     ports:
       - 8080:8080
     environment:
